# facial-recognition

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  facial-recognition  main.cpp
include/: FaceDetector.h
src/: FaceDetector.cpp  main.cpp
